# BetterAnk

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/BetterAnk/: main.py
backend/alembic/: env.py
backend/alembic/versions/: 2627407c2584_initial_migration.py  56f21f59d33b_initial_migration.py
backend/app/: database.py  main.py  models.py  requirements.txt
backend/app/src/: main.py
backend/routers/: authentication.py  decks.py  flashcards.py  llm.py
backend/src/: __init__.py  auth.py  database.py  dependencies.py  llm_service.py  main.py  models.py  requirements.txt  spaced_repetition.py  utils.py
backend/tests/: README.md  __init__.py  conftest.py  test_authentication.py  test_decks.py  test_flashcards.py  test_sm2_algorithm.py
frontend/: package.json
frontend/src/: deck.css  deck.html  deck.js  index.html  login.html  login.js  modal.css  register.html  register.js  review.css  review.html  review.js  start.html  start.js
frontend/src/app/: layout.tsx  page.tsx
