
[project]
name = "betterank-backend"
version = "0.1.0"
description = "BetterAnk backend with FastAPI and SQLAlchemy"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "sqlalchemy==2.0.43",
    "python-dotenv==1.0.1",
    "passlib==1.7.4",
    "bcrypt==4.1.3",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "alembic==1.13.1",
    "psycopg[binary]",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
]
